# CICD_Test

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  Makefile  STM32F401RETx_FLASH.ld  build_log.txt  create_stm32_project.bat  stm32-nucleo-cicd.ioc
.github/workflows/: build.yml
Core/Src/: gpio.c  main.c  stm32f4xx_it.c  tim.c
app/Inc/: app.h  led_manager.h  uart_logger.h  version.h
app/Src/: app.c  led_manager.c  uart_logger.c
bsp/Inc/: bsp.h
bsp/Src/: bsp.c
build_test/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build_test/Testing/Temporary/: CTestCostData.txt
build_test/tests/: CTestTestfile.cmake  cmake_install.cmake
cmake/: stm32f401re.cmake  toolchain-arm-none-eabi.cmake  version.cmake  version_git.h.in
scripts/: flash.cmd  flash.sh
tests/: CMakeLists.txt
tests/mocks/: mock_bsp.c  mock_bsp.h  version_git.h
tests/unit/: test_app.c  test_led_manager.c  test_uart_logger.c
